# Gemini_video_annotator

./: README.md  pyproject.toml  result.md
src/video_annotations/: crew.py  main.py
src/video_annotations/config/: agents.yaml  tasks.yaml
video_annotations/: result.md
