[project]
name = "video_annotations"
version = "0.1.0"
description = "video-annotations using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
video_annotations = "video_annotations.main:run"
run_crew = "video_annotations.main:run"
train = "video_annotations.main:train"
replay = "video_annotations.main:replay"
test = "video_annotations.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
